# evaluation-first-attention

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  env.example.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: alpha_sensitivity.yaml  crossmodel_local.yaml  default.yaml  groq_gemini.yaml  groq_ollama_crossmodel.yaml  minimax_crossmodel_mtbench.yaml  minimax_eval.yaml  minimax_gemini.yaml  minimax_minimax.yaml  minimax_ollama_crossmodel.yaml  ollama_local.yaml
docs/: README_INDEX.md  README_PATTERNS_SUMMARY.md  README_QUICK_TEMPLATE.md  README_REAL_EXAMPLES.md  README_RESEARCH_GUIDE.md  README_SUMMARY.txt  README_TEMPLATE_ANALYSIS.md  architecture.html  results_table.html
experiments/: run_experiment.py
experiments/prompts/: mt_bench_prompts.json  sample_prompts.json
experiments/results/: results_20260323_023328.json  results_20260323_131252.json  results_20260329_225506.json
paper/: EFA_Paper_Final.tex  generate_figures.py
scripts/: analyze_results.py  generate_results_table.py  generate_screenshot_html.py
src/efa/: __init__.py  baselines.py  criteria_generator.py  evaluator.py  llm_client.py  models.py  pipeline.py  progressive_generator.py  reattention.py
src/rubricon/: __init__.py  backends.py  budget.py  callbacks.py  cli.py  cmpg.py  config.py  criteria.py  evaluators.py  models.py  pipeline.py  registry.py  strategies.py  templates.py
src/rubricon/_prompts/: cmpg_system.j2  cmpg_user.j2  criteria_system.j2  criteria_user.j2  fusion_synthesis.j2  judge_batch_system.j2  judge_batch_user.j2  judge_single_system.j2  judge_single_user.j2  refine_feedback.j2
tests/: test_baselines.py  test_criteria_generator.py  test_evaluator.py  test_llm_client.py  test_models.py  test_pipeline.py  test_progressive_generator.py  test_reattention.py  test_rubricon_config.py  test_rubricon_pipeline.py  test_rubricon_plugins.py
