[build-system]
requires = ["setuptools>=68.0,<77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubricon"
version = "0.2.0"
description = "Rubricon — specification-first generation for LLMs. Cross the rubricon: rubric-conditioned generation with failure-weighted reattention."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Karthick Raja M", email = "karthickrajam18@gmail.com"},
]
maintainers = [
    {name = "Karthick Raja M", email = "karthickrajam18@gmail.com"},
]
keywords = [
    "llm",
    "evaluation",
    "rubric",
    "generation",
    "tdd",
    "spec-driven",
    "criteria",
    "reattention",
    "agents",
    "prompting",
    "openai",
    "anthropic",
    "ollama",
    "litellm",
    "ai",
    "machine-learning",
    "nlp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.50.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "build>=1.2",
    "twine>=5.1",
]
experiments = [
    "pandas>=2.0",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
    "scipy>=1.12",
]
cli = [
    "typer>=0.12",
]
all = [
    "rubricon[dev,experiments,cli]",
]

[project.urls]
Homepage = "https://github.com/karthyick/evaluation-first-attention"
Repository = "https://github.com/karthyick/evaluation-first-attention"
Issues = "https://github.com/karthyick/evaluation-first-attention/issues"
Documentation = "https://github.com/karthyick/evaluation-first-attention#readme"
Changelog = "https://github.com/karthyick/evaluation-first-attention/blob/main/CHANGELOG.md"
Paper = "https://github.com/karthyick/evaluation-first-attention/blob/main/paper/EFA_Paper_Final.pdf"

[project.scripts]
rubricon = "rubricon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rubricon*", "efa*"]

[tool.setuptools.package-data]
rubricon = ["_prompts/*.j2", "py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
